json-skip dispatcher object

--- a/Changes
+++ b/Changes
@@ -1,2 +1,4 @@
+v0.0.2		Tue 17 Aug 16:17:07 BST 2021
+	*	json-skip on the dispatcher-object
 v0.0.1		Sat  6 Feb 11:23:03 GMT 2021
 	*	Initial release
