Upload to zef repository

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
+v0.0.3	Sun  7 Aug 09:43:40 BST 2022
+	* Upload to zef repository
 v0.0.2		Tue 17 Aug 16:17:07 BST 2021
 	*	json-skip on the dispatcher-object
 v0.0.1		Sat  6 Feb 11:23:03 GMT 2021
 	*	Initial release
+
